<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.levegra.anthonius_1202150034_modul3.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_marginTop="15dp"
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/username_field"
            android:paddingTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/password_field"
            android:paddingTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button_login"
            android:layout_marginTop="15dp"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
